--- a/QTAutomation/.project
+++ b/QTAutomation/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>QTAutomation</name>
+	<name>QTAutomationteam</name>
 	<comment></comment>
 	<projects>
 	</projects>
